Added a copy button

--- a/Heatmap Review Merger/Merger.html
+++ b/Heatmap Review Merger/Merger.html
@@ -12,7 +12,7 @@
 
        
         <button onclick="superFunc()">Convert</button>
-        <div id="outputter">kek</div>
+        <div id="outputter">Hi!</div>
         <script src="./Script/script.js" async defer></script>
     </body>
 </html>
